--- a/src/docs/asciidoc/util/definitions.adoc
+++ b/src/docs/asciidoc/util/definitions.adoc
@@ -25,6 +25,7 @@
 :fluent: pass:normal[ `@Fluent` ]
 :identity:  pass:normal[ `@Identity` ]
 :independent:  pass:normal[ `@Independent` ]
+:ignoreModifications:  pass:normal[ `@IgnoreModifications` ]
 :only:  pass:normal[ `@Only` ]
 :mark: pass:normal[ `@Mark` ]
 :modified:  pass:normal[ `@Modified` ]
@@ -37,6 +38,7 @@
 :nn: pass:normal[ `@NotNull` ]
 :nullable: pass:normal[ `@Nullable` ]
 :propagateModification: pass:normal[ `@PropagateModification` ]
+:sse: pass:normal[ `@StaticSideEffects` ]
 :supportData: pass:normal[ `@SupportData` ]
 :testMark: pass:normal[ `@TestMark` ]
 :variable:  pass:normal[ `@Variable` ]
