correction to static side effects

--- a/src/docs/asciidoc/road-to-immutability/050-e2immutable.adoc
+++ b/src/docs/asciidoc/road-to-immutability/050-e2immutable.adoc
@@ -434,17 +434,18 @@ public class CountAccess<K> {
 
 The next section, on <<value-based-classes>>, briefly explores these semantic differences.
 
-Note that when the modification takes place inside the constructor, it is "ignored", because constructors are meant to be modifying:
+Note that when the modification takes place inside the constructor, it is still not ignored, because for static fields,
+static code blocks act as the constructor:
 
 .Modification takes place inside constructor
 [source,java]
 ----
-@E2Container
+@E1Container
 public class HasUniqueIdentifier<K> {
     public final K k;
     public final int identifier;
 
-    @NotModified
+    @Modified
     private static final AtomicInteger generator = new AtomicInteger();
 
     public HasUniqueIdentifier(K k) {
@@ -453,6 +454,23 @@ public class HasUniqueIdentifier<K> {
     }
 }
 ----
+
+Only modifications in a static code block are ignored:
+[source,java]
+----
+
+public class CountAccess<K> {
+    ...
+    private static final AtomicInteger counter;
+
+    static {
+        counter = new AtomicInteger();
+        counter.getAndIncrement(); // this modification is ignored
+    }
+    ...
+}
+----
+
 
 When static modifying methods are called, on a field not belonging to the primary type or any of the parent types, or directly on a type expression which does not refer to any of the types in the primary type or parent types, we will make an exception to this rule, and classify the modification as a _static side effect_.
 This leads to consistency with the rules of level 2 immutable types, which only look at the fields and assume that when methods do not modify the fields, they are actually non-modifying.
@@ -471,7 +489,7 @@ public K getK() {
 
 We leave it up to the programmer or designer to determine whether static calls deserve a {sse} warning, or not.
 In almost all instances, we prefer a singleton instance (see <<singleton-classes>>) over a class with modifying static methods.
-In singletons the normal modification rules apply, unless {ignoreModifications} decorates the static field which allows access to the singleton.
+In singletons the normal modification rules apply, unless {ignoreModifications} decorates the static field giving access to the singleton.
 
 [#value-based-classes]
 === Value-based classes
